mcd/aws/distributed_edge/2-security-groups.tf
# Security Groups

## Data Security Group
## Data Plane Security Group with allows All
resource "aws_security_group" "data-sg" {
  vpc_id = aws_vpc.edge_vpc.id
  name   = "${var.env_name}-data-sg"
  tags = {
    Name    = "${var.env_name}-data-sg"
    prefix = var.env_name
  }
  egress = [
    {
      description      = "Allow all outbound"
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = []
      prefix_list_ids  = []
      security_groups  = []
      self             = false
    }
  ]
  ingress = [
    {
      description      = "Allow all inbound"
      from_port        = 0
      to_port          = 0
      protocol         = "-1"
      cidr_blocks      = ["0.0.0.0/0"]
      ipv6_cidr_blocks = []
      prefix_list_ids  = []
      security_groups  = []
      self             = false
    }
  ]
}

## Mgmt Security Group
## Mgmt Security Group with allows HTTP, HTTPS, and SSH
resource "aws_security_group" "mgmt-sg" {
  name   = "${var.env_name}-mgmt-sg"
  vpc_id = aws_vpc.edge_vpc.id
  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = var.external_ips
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name   = "${var.env_name}-mgmt-sg"
    prefix = var.env_name
  }
}
